Correct mobile nav menu spacing (#32)
* Nav flex: space between

* whaaaaat

--- a/assets/scss/modules/_navigation.scss
+++ b/assets/scss/modules/_navigation.scss
@@ -99,7 +99,7 @@ $header-ht--small: 3rem;
 
 .title-bar-title {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 
   a {
